# fastapi_ecommerce

./: .dockerignore  .gitignore  README.md  alembic.ini  check_metadata.py  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
app/: Dockerfile  Dockerfile.prod  database.py  db_depends.py  log.py  main.py  schemas.py  utils.py
app/auth/: password.py  user.py
app/db/: config.py  database.py  db_depends.py
app/migrations/: env.py
app/migrations/versions/: 0f4af54939d3_create_tables_user.py  2281825441ec_create_tables.py  2d99bab9e9c6_initial_migration_with_server_defaults.py  557beaceeea9_update_table_products.py  6382f3494718_initial_migration_for_postgresql.py  75165af71a80_create_tables_reviews.py  79a612a57ed0_update_products_price.py  87403f21f762_update_table_product.py  8ab738d007d8_initial.py  92cf5a9fa074_create_search_vector.py  9834f67ae234_create_categories_and_products_tables.py  9b2478fd98c1_add_orders_and_order_items.py  ca3706322955_create_cart.py  d5624ae4e820_create_tables_course.py  fcdad9b460dc_create_tables.py
app/models/: __init__.py  cart_items.py  categories.py  orders.py  products.py  reviews.py  users.py
app/routers/: cart.py  categories.py  orders.py  products.py  reviews.py  router_depens.py  users.py
app/schemas/: cart_items.py  categories.py  orders.py  products.py  reviews.py  users.py
nginx/: Dockerfile  fastapi_ecommerce.conf
